[package]
name = "surviving_async"
version = "0.1.0"
authors = ["michael wagner <michael.wagner@tum-create.edu.sg>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.3"
async-std = { version = "1.6.2", features = ["attributes"] }
futures = "0.3.5"
sha3 = "0.9.1"
color-eyre ="0.5.1"
